# scripts

./: .travis.yml  Dockerfile  Dockerfile.perl  LICENSE  README.md  adom.sh  anki_jcards.py  apps  backup.pl  backup.sh  cal.py  calc.pl  canon.pl  cd.py  cecho.sh  cert.pl  cert.py  chain.pl  colors.py  colors_term.bash  colors_tmux.bash  csv_fields_check.bash  db-create  dns_check  ex.pl  ex.py  figlet_test_all.bash  headall.pl  helpers.py  load.pl  load.py  man.pl  mini.pl  mini.py  mkconfig  mkconfig.pl  mkconfig.py  mkconfig.sh  mkdb  mkmod  (+30 more)
arch/: pacaur.pl
certs/: INSTALL.md  README.md  certs.1  certs.py  pyproject.toml
certs/src/certs/: __init__.py  colors.py
deprecated/: ex.pl  www.pl
ff_explorer/: Cargo.toml
ff_explorer/src/: args.rs  lib.rs  main.rs
fuzzy_cd/: README.md  cd.py  pyproject.toml
fuzzy_cd/fcd/: __init__.py
fuzzy_cd/src/c/: __init__.py
fuzzy_explorer/: TODO.md  ex.py
mail/: cmd  list.awk  makefile-db.pl  makefile.db.sh
mini/: pyproject.toml
mini/src/mini/: __init__.py  cfg.py
mkconfig/: README.md  README.rst  mkconfig.py  pyproject.toml
mkconfig/src/mkconfig/: __init__.py  colors.py
pics/: pics.py  pyproject.toml
python/lib/: colors.py
sudoku/: sud1  sudoku.py
textdir/: README.md  pyproject.toml
textdir/exports/: help.src  nvim.src
textdir/src/td/: __init__.py
