[project]
name = "certs"
version = "0.1.0"
description = "Get certificates's info. Handier than `openssl ...` in a loop."
readme = "README.md"
authors = [
    { name = "Dimitar Dimitrov", email = "dimitar.dimitrov@version1.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "cryptography>=44.0.0",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[project.scripts]
certs = "certs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
