[project]
name = "c"
version = "1.1.0"
description = "Fuzzy cd, using shell's history"
readme = "README.md"
authors = [
    { name = "Dimitar Dimitrov", email = "kurkale6ka@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "tabulate>=0.9.0",
]

[project.scripts]
c = "c:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
