[project]
name = "mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dimitar Dimitrov", email = "kurkale6ka@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mini = "mini:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
