[project]
name = "mkconfig"
version = "0.1.0"
description = "Dotfiles setup"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.44",
]
authors = [
    {name = "Dimitar Dimitrov", email = "kurkale6ka@gmail.com"},
]

[project.scripts]
mkconfig = "mkconfig:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
