[project]
name = "td"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dimitar Dimitrov", email = "kurkale6ka@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
td = "td:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
