[project]
name = "td"
version = "1.0.0"
description = "Export a directory to a single text document"
readme = "README.md"
authors = [
    { name = "Dimitar Dimitrov", email = "kurkale6ka@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
td = "td:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
